testsuite/tests/interpreter_errors/unknown_arg_name/test.out
script.lkql:3:13: error: Unknown argument name: z
  3 | add(x=21, z=21)
    |             ^^
